@@ -43,5 +43,5 @@
       }
    },
    "release_status" : "testing",
-   "version" : "0.77_1"
+   "version" : "0.77_2"
 }
